Fixed planet alignment
planets shrink and grow when screen is resized

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,47 +8,104 @@ body {
 
 .topNav {
 	height: 44px;
-	width: 100%;
-	
+	width: auto;
+
 	list-style: none;
-	
-	background: #696969;
-	
+
+	background: #404040;
+	box-shadow: 0 2px 5px 0 rgba(150,150,150,0.23);
+
 	display: flex;
 	align-items: center;
 	padding: 0;
-	
-	letter-spacing: 1px;
-	font-family: "Segoe UI",Arial,sans-serif;
-	font-size: 17px;
-	
-	position: fixed;
-}
 
-.topNav a:hover {
-	background: #c18ebf;
+	letter-spacing: 1px;
+	font-family: "HP Simplified","Segoe UI",Arial,sans-serif;
+	font-size: 17px;
 }
 
 .topNav a {
 	text-decoration: none;
 	color: white;
-	
-	padding: 10px 15px 9px 15px;
+
+	padding: 10px 17px 9px 17px;
+}
+
+.topNav a:hover {
+	background: #c18ebf;
+	box-shadow: 0px 1px 2px 0px rgb(214, 142, 211);
 }
 
 main {
-	height: 100vh;
+	height: 50vh;
+	margin-left: 1em;
 
 	display: flex;
-	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-around;
 }
 
+main section {
+	margin: 0 1em 0 1em;
+}
+
 .planet {
 	transition: all 0.3s;
+
+	width: 100%;
 }
 
 .planet:hover {
 	transform: scale(1.3);
+}
+
+.infoPane {
+	height: 44px;
+	background: #404040;
+	box-shadow: 0 -2px 5px 0 rgba(150,150,150,0.23);
+}
+
+p {
+	margin: 0;
+}
+
+/* put into JS?*/
+main section:first-child {
+	width: 280px;
+}
+
+main section:nth-child(2) {
+	width: 80px;
+}
+
+main section:nth-child(3) {
+	width: 100px;
+}
+
+main section:nth-child(4) {
+	width: 110px;
+}
+
+main section:nth-child(5) {
+	width: 96px;
+}
+
+main section:nth-child(6) {
+	width: 190px;
+}
+
+main section:nth-child(7) {
+	width: 320px;
+}
+
+main section:nth-child(8) {
+	width: 150px;
+}
+
+main section:nth-child(9) {
+	width: 144px;
+}
+
+main section:nth-child(10) {
+	width: 60px;
 }
